k8s/n8n/02-n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: lucas-garcia-entrenai-no-borrar
spec:
  selector:
    app: n8n
  ports:
  - protocol: TCP
    port: 5678
    targetPort: 5678
